--- a/ansible/roles/lssd_copy/defaults/main.yml
+++ b/ansible/roles/lssd_copy/defaults/main.yml
@@ -4,6 +4,10 @@
 # =============================================================================
 # Copies data from a temporary disk (created from golden snapshot) to LSSD RAID.
 # This role is only used for LSSD machines where we can't create disk from snapshot.
+#
+# Uses parallel dd + tar for maximum throughput (~590 MB/s vs ~150 MB/s with rsync):
+# - dd + pv: Copies the large mdbx.dat file (5.5TB) with progress monitoring
+# - tar: Copies all other files, preserving ownership automatically
 # =============================================================================
 
 # Mount points
@@ -13,5 +17,6 @@ snapshot_mount_point: "/mnt/snapshot"
 # Temp disk device name (attached by configure.yaml Cloud Build)
 snapshot_disk_device: "/dev/disk/by-id/google-snapshot-disk"
 
-# rsync options for efficient copy
-rsync_options: "-aHAX --info=progress2"
+# Large database file to copy with dd (most of the data)
+mdbx_source: "{{ snapshot_mount_point }}/op-reth/db/mdbx.dat"
+mdbx_dest: "{{ mount_point }}/op-reth/db/mdbx.dat"
